--- a/index.html
+++ b/index.html
@@ -9,34 +9,33 @@
 <div style="text-align: left;">
 <span style="color: rgb(0,0,0); font-family: '@Arial Unicode MS'; font-size: 30px; text-align: left;">Lukas Schmid</span><br>
 <span style="font-size: 12pt; font-family: '@Arial Unicode MS'; color: rgb(0,0,0);">
-Postdoctoral Researcher<br><br>
+Incoming Postdoctoral Fellow<br><br>
 
-Autonomous Systems Lab<br>
-Institute of Robotics and Intelligent Systems<br>
-Dep. of Mechanical and Process Engineering <br>
-ETH Zurich <br><br>
+MIT-Spark Lab<br>
+Dep. of Aeronautics and Astronautics<br>
+Massachusetts Institute of Technology<br><br>
 
-LEE J-301<br>
-Leonhardstrasse 21 <br>
-8092 Zurich<br>
-Switzerland <br><br>
+77 Massachusetts Avenue<br>
+Cambridge, MA 02139<br>
+United States of America<br><br>
 
-<a href="mailto:schmluk@ethz.ch" onFocus="if(this.blur)this.blur()">schmluk@ethz.ch</a><br>
-+41 44 632 74 74 <br>
+<a href="mailto:lschmid@mit.edu" onFocus="if(this.blur)this.blur()">lschmid@mit.edu</a><br>
 </span></div>
 <br>
 <br>
 <br>
+<br>
 <div style="text-align: justify; margin-left: 10px; width: 770px; font-family: '@Arial Unicode MS';">
-I'm a researcher at the <a target="_blank" href="https://asl.ethz.ch/">Autonomous Systems Lab (ASL)</a>, lead by Prof. Dr. Roland Siegwart at ETH Zurich. I obtained my PhD at ASL in 2022, in collaboration with the Microsoft Mixed Reality & AI Lab lead by Prof. Dr. Marc Pollefeys. Before that, I obtained my MSc. in Robotics, Systems, and Control (RSC) in 2019 also at ETH, which I graduated with distinction and was awarded the Willi Studer Prize for the best graduate and the ETH Medal for outstanding master theses. <br>
+I'm an incoming postodoctoral fellow at the <a target="_blank" href="http://web.mit.edu/sparklab/"></a> MIT-SPARK Lab</a> lead by Prof. Dr. Luca Carlone. I obtained my PhD at the <a target="_blank" href="https://asl.ethz.ch/">Autonomous Systems Lab (ASL)</a> lead by Prof. Dr. Roland Siegwart at ETH Zurich in 2022, in collaboration with the Microsoft Mixed Reality & AI Lab lead by Prof. Dr. Marc Pollefeys. Before that, I obtained my M.Sc. in Robotics, Systems, and Control (RSC) in 2019 also at ETH, which I graduated with distinction and was awarded the Willi Studer Prize for the best graduate and the ETH Medal for outstanding master theses. <br>
 <br>
 My main research interest lies in autonomy for intelligent mobile systems. In particular, my work focuses on active and passive perception and understanding of changing environments for robotic interaction and augmented reality. This includes building dense geometric and semantic representations of an environment, scene abstraction and understanding, lifelong learning and mapping, as well as active path and interaction planning to build these representations and abstractions autonomously and in unknown environments.<br>
 </div>
 <br>
 <br>
 <br>
-<br>
 
+<hr style="margin-top: 12px; height: 1px; width: 100%;"><br>
+<br>
 
 <div style="text-align: center; font-family: '@Arial Unicode MS';"><big>
 <a href="index.html">Home</a>
@@ -53,10 +52,10 @@ My main research interest lies in autonomy for intelligent mobile systems. In pa
 <br>
 <br>
 
-<hr style="margin-top: 12px; height: 1px; width: 100%;"><br>
+<!-- 
 <a href="http://www.asl.ethz.ch/" target="_blank"><img src="images/logo_asl.png" style="border: 0px solid ; width: 164px; height: 100px;" alt="ASL" align="middle"></a>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<a href="https://ethz.ch/en.html" target="_blank"><img src="images/logo_eth.png" style="border: 0px solid ; width: 272px; height: 100px;" alt="ETH Zürich" align="middle"></a>
+<a href="https://ethz.ch/en.html" target="_blank"><img src="images/logo_eth.png" style="border: 0px solid ; width: 272px; height: 100px;" alt="ETH Zürich" align="middle"></a> -->
 </div>
 </div>
 </body></html>
