--- a/open_source_code.html
+++ b/open_source_code.html
@@ -108,13 +108,19 @@
           <tr>
             <td style="width: 300px;"><img src="images/code/eal.gif" style="border: 0px solid ; width: 300px;"
                 alt="Active Learning For Segmentation" align="middle"> </td>
-            <td style="width: 500px;"><a href="https://github.com/ethz-asl/active_learning_for_segmentation">Active Learning For Segmentation</a>. A complete pipeline for fully autonomous domain adaptation of semantic segmentation models. we provide simulation, uncertainty estmiation, uncertainty-aware semantic mapping, and informative path planning modules to observe high uncertainty areas and autonomously improve the semantic segmentation over time. Main implementation by René Zurbrügg.</td>
+            <td style="width: 500px;"><a href="https://github.com/ethz-asl/active_learning_for_segmentation">Active
+                Learning For Segmentation</a>. A complete pipeline for fully autonomous domain adaptation of semantic
+              segmentation models. we provide simulation, uncertainty estmiation, uncertainty-aware semantic mapping,
+              and informative path planning modules to observe high uncertainty areas and autonomously improve the
+              semantic segmentation over time. Main implementation by René Zurbrügg.</td>
           </tr>
-          
+
           <tr>
             <td style="width: 300px;"><img src="images/code/ssc.gif" style="border: 0px solid ; width: 300px;"
                 alt="SSC Exploration" align="middle"> </td>
-            <td style="width: 500px;"><a href="https://github.com/ethz-asl/ssc_exploration">SSC Exploration</a>. Incremental fusion of 3D scene completion and multi-layer map integration with the measured data for safe, efficient, and itnerpretable exploration mapping and planning .</td>
+            <td style="width: 500px;"><a href="https://github.com/ethz-asl/ssc_exploration">SSC Exploration</a>.
+              Incremental fusion of 3D scene completion and multi-layer map integration with the measured data for safe,
+              efficient, and itnerpretable exploration mapping and planning .</td>
           </tr>
 
         </tbody>
@@ -178,10 +184,11 @@
 
         </tbody>
       </table>
+
       <br>
       <br>
       <br>
-      <br>
+      <hr style="margin-top: 12px; height: 1px; width: 100%;"><br>
       <br>
 
 
@@ -199,13 +206,13 @@
         <br>
         <br>
         <br>
-
+        <!-- 
         <hr style="margin-top: 12px; height: 1px; width: 100%;"><br>
         <a href="http://www.asl.ethz.ch/" target="_blank"><img src="images/logo_asl.png"
             style="border: 0px solid ; width: 164px; height: 100px;" alt="ASL" align="middle"></a>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         <a href="https://ethz.ch/en.html" target="_blank"><img src="images/logo_eth.png"
-            style="border: 0px solid ; width: 272px; height: 100px;" alt="ETH Zürich" align="middle"></a>
+            style="border: 0px solid ; width: 272px; height: 100px;" alt="ETH Zürich" align="middle"></a> -->
       </div>
     </div>
 </body>
