--- a/publications.html
+++ b/publications.html
@@ -252,6 +252,7 @@
           <br>
           <br>
           <br>
+          <hr style="margin-top: 12px; height: 1px; width: 100%;"><br>
           <br>
           <a href="index.html">Home</a>
           &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -267,12 +268,12 @@
         <br>
         <br>
 
-        <hr style="margin-top: 12px; height: 1px; width: 100%;"><br>
+        <!-- <hr style="margin-top: 12px; height: 1px; width: 100%;"><br>
         <a href="http://www.asl.ethz.ch/" target="_blank"><img src="images/logo_asl.png"
             style="border: 0px solid ; width: 164px; height: 100px;" alt="ASL" align="middle"></a>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         <a href="https://ethz.ch/en.html" target="_blank"><img src="images/logo_eth.png"
-            style="border: 0px solid ; width: 272px; height: 100px;" alt="ETH Zürich" align="middle"></a>
+            style="border: 0px solid ; width: 272px; height: 100px;" alt="ETH Zürich" align="middle"></a> -->
       </div>
 
 </body>
