--- a/student_projects.html
+++ b/student_projects.html
@@ -1,60 +1,92 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
-<html><head>
-<meta content="text/html; charset=ISO-8859-1" http-equiv="content-type"><title>Lukas Schmid Student Projects</title>
+<html>
+
+<head>
+  <meta content="text/html; charset=ISO-8859-1" http-equiv="content-type">
+  <title>Lukas Schmid Student Projects</title>
 </head>
 
-<body style="width: 800px; margin-top: 60px; position: relative; margin-left: auto; margin-right: auto; color: rgb(0, 0, 0); background-color: rgb(255, 255, 255);" alink="#1111aa" link="#1111aa" vlink="#1111aa">
-<div style="text-align: center;"><span style="color: rgb(0, 0, 0); font-family: '@Arial Unicode MS'; font-size: 30px; text-align: center;">
-Student Projects - Lukas Schmid</span>
-<br>
-<br>
-<br>
+<body
+  style="width: 800px; margin-top: 60px; position: relative; margin-left: auto; margin-right: auto; color: rgb(0, 0, 0); background-color: rgb(255, 255, 255);"
+  alink="#1111aa" link="#1111aa" vlink="#1111aa">
+  <div style="text-align: center;"><span
+      style="color: rgb(0, 0, 0); font-family: '@Arial Unicode MS'; font-size: 30px; text-align: center;">
+      Student Projects - Lukas Schmid</span>
+    <br>
+    <br>
+    <br>
 
 
-<div style="text-align: justify; width: 800px; font-family: '@Arial Unicode MS';">
-I'm passionate about the education of the next generation of scientists and engineers. Next to teaching exercise classes for lectures, I mainly contribute to this through the supervision of Master, Semester, and Bachelor Theses. 
-<br>
-<br>
-I regularly upload project proposals to <a target="_blank" href="https://sirop.org/app/">Sirop</a>, which are also featured on the <a target="_blank" href="https://asl.ethz.ch/education/student-projects.html">student projects page</a> of the Autonomous Systems Lab at ETH Zurich. I also accept proactive applications of highly motivated students. If you are interested in working on a project in the fields of active perception and long-term scene understanding please send a short CV and transcript to <a href="mailto:schmluk@ethz.ch" onFocus="if(this.blur)this.blur()">schmluk@ethz.ch</a>.
-<br>
-<br>
-Examples of past projects:
-</div>
-<br>
-<div style="text-align: justify; width: 800px; font-size: 20;">
-<a href="student_projects/lidar_motion_detection.pdf" target="_blank"><img style="width: 380px; float: left; margin: 0px 0px 40px 0px" alt="Lidar Motion Detection" src="student_projects/lidar_motion_detection.jpg" border="1px solid #000000"></a>
-<a href="student_projects/incremental_scenegraph_construction.pdf" target="_blank"><img style="width: 380px; float: right; margin: 0px 0px 40px 0px" alt="Incremental Scene Graph Construction" src="student_projects/incremental_scenegraph_construction.jpg" border="1px solid #000000"></a>
-<br>
-<br>
-<a href="student_projects/active_panoptic_mapping.pdf" target="_blank"><img style="width: 380px; float: left; margin: 0px 0px 40px 0px" alt="Active Panoptic Mapping" src="student_projects/active_panoptic_mapping.jpg" border="1px solid #000000"></a>
-<a href="student_projects/consistent_panoptic_mapping.pdf" target="_blank"><img style="width: 380px; float: right; margin: 0px 0px 40px 0px" alt="Consistent Panoptic Mapping" src="student_projects/consistent_panoptic_mapping.jpg" border="1px solid #000000"></a>
-<br>
-<br>
-<a href="student_projects/neural_robotic_mapping.pdf" target="_blank"><img style="width: 380px; float: left; margin: 0px 0px 40px 0px" alt="Neural Robotic Mapping" src="student_projects/neural_robotic_mapping.jpg" border="1px solid #000000"></a>
-<a href="student_projects/scene_completion_for_exploration.pdf" target="_blank"><img style="width: 380px; float: right; margin: 0px 0px 40px 0px" alt="Scene Completion for Exploration" src="student_projects/scene_completion_for_exploration.jpg" border="1px solid #000000"></a>
-<br>
-<br>
-</div>
+    <div style="text-align: justify; width: 800px; font-family: '@Arial Unicode MS';">
+      I'm passionate about the education of the next generation of scientists and engineers. Next to teaching exercise
+      classes for lectures, I mainly contribute to this through the supervision of Master, Semester, and Bachelor
+      Theses.
+      <br>
+      <br>
+      I regularly upload project proposals and also accept
+      proactive applications of highly motivated students. If you are interested in working on a project in the fields
+      of active perception and long-term scene
+      understanding please send a short CV and transcript to <a href="mailto:lschmid@mit.edu"
+        onFocus="if(this.blur)this.blur()">lschmid@mit.edu</a>.
+      <br>
+      <br>
+      Examples of past projects:
+    </div>
+    <br>
+    <div style="text-align: justify; width: 800px; font-size: 20;">
+      <a href="student_projects/lidar_motion_detection.pdf" target="_blank"><img
+          style="width: 380px; float: left; margin: 0px 0px 40px 0px" alt="Lidar Motion Detection"
+          src="student_projects/lidar_motion_detection.jpg" border="1px solid #000000"></a>
+      <a href="student_projects/incremental_scenegraph_construction.pdf" target="_blank"><img
+          style="width: 380px; float: right; margin: 0px 0px 40px 0px" alt="Incremental Scene Graph Construction"
+          src="student_projects/incremental_scenegraph_construction.jpg" border="1px solid #000000"></a>
+      <br>
+      <br>
+      <a href="student_projects/active_panoptic_mapping.pdf" target="_blank"><img
+          style="width: 380px; float: left; margin: 0px 0px 40px 0px" alt="Active Panoptic Mapping"
+          src="student_projects/active_panoptic_mapping.jpg" border="1px solid #000000"></a>
+      <a href="student_projects/consistent_panoptic_mapping.pdf" target="_blank"><img
+          style="width: 380px; float: right; margin: 0px 0px 40px 0px" alt="Consistent Panoptic Mapping"
+          src="student_projects/consistent_panoptic_mapping.jpg" border="1px solid #000000"></a>
+      <br>
+      <br>
+      <a href="student_projects/neural_robotic_mapping.pdf" target="_blank"><img
+          style="width: 380px; float: left; margin: 0px 0px 40px 0px" alt="Neural Robotic Mapping"
+          src="student_projects/neural_robotic_mapping.jpg" border="1px solid #000000"></a>
+      <a href="student_projects/scene_completion_for_exploration.pdf" target="_blank"><img
+          style="width: 380px; float: right; margin: 0px 0px 40px 0px" alt="Scene Completion for Exploration"
+          src="student_projects/scene_completion_for_exploration.jpg" border="1px solid #000000"></a>
 
-<div style="text-align: center; font-family: '@Arial Unicode MS';"><big>
-<a href="index.html">Home</a>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
-<a href="publications.html">Publications</a>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
-<a href="student_projects.html">Student Projects</a>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<a href="open_source_code.html">Open Source Code</a>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
-<a href="download/CV.pdf">CV</a>
-</big>
-<br>
-<br>
-<br>
+    </div>
 
-<hr style="margin-top: 12px; height: 1px; width: 100%;"><br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <hr style="margin-top: 12px; height: 1px; width: 100%;"><br>
+    <br>
+
+    <div style="text-align: center; font-family: '@Arial Unicode MS';"><big>
+        <a href="index.html">Home</a>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="publications.html">Publications</a>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="student_projects.html">Student Projects</a>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="open_source_code.html">Open Source Code</a>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="download/CV.pdf">CV</a>
+      </big>
+      <br>
+      <br>
+      <br>
+
+      <!-- <hr style="margin-top: 12px; height: 1px; width: 100%;"><br>
 <a href="http://www.asl.ethz.ch/" target="_blank"><img src="images/logo_asl.png" style="border: 0px solid ; width: 164px; height: 100px;" alt="ASL" align="middle"></a>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<a href="https://ethz.ch/en.html" target="_blank"><img src="images/logo_eth.png" style="border: 0px solid ; width: 272px; height: 100px;" alt="ETH Zürich" align="middle"></a>
-</div>
-</div>
-</body></html>
+<a href="https://ethz.ch/en.html" target="_blank"><img src="images/logo_eth.png" style="border: 0px solid ; width: 272px; height: 100px;" alt="ETH Zürich" align="middle"></a> -->
+    </div>
+  </div>
+</body>
+
+</html>
