--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body style="width: 800px; margin-top: 60px; position: relative; margin-left: auto; margin-right: auto; color: rgb(0, 0, 0); background-color: rgb(255, 255, 255);" alink="#1111aa" link="#1111aa" vlink="#1111aa">
 <div style="text-align: center;">
-<img style="width: 313px; height: 300px; float: left; padding-right: 20px;" alt="Lukas Schmid" src="images/picture.jpg">
+<img style="width: 313px; height: 300px; float: left; padding-right: 20px; padding-left: 10px;" alt="Lukas Schmid" src="images/picture.jpg">
 <div style="text-align: left;">
 <span style="color: rgb(0,0,0); font-family: '@Arial Unicode MS'; font-size: 30px; text-align: left;">Lukas Schmid</span><br>
 <span style="font-size: 12pt; font-family: '@Arial Unicode MS'; color: rgb(0,0,0);">
