update title + address

--- a/index.html
+++ b/index.html
@@ -9,24 +9,25 @@
 <div style="text-align: left;">
 <span style="color: rgb(0,0,0); font-family: '@Arial Unicode MS'; font-size: 30px; text-align: left;">Lukas Schmid</span><br>
 <span style="font-size: 12pt; font-family: '@Arial Unicode MS'; color: rgb(0,0,0);">
-Incoming Postdoctoral Fellow<br><br>
+Postdoctoral Fellow<br><br>
 
 MIT-Spark Lab<br>
-Dep. of Aeronautics and Astronautics<br>
-Massachusetts Institute of Technology<br><br>
+Massachusetts Institute of Technology<br>
+Department of Aeronautics and Astronautics<br><br>
 
-77 Massachusetts Avenue<br>
+77 Massachusetts Avenue, Room 32-D569<br>
 Cambridge, MA 02139<br>
 United States of America<br><br>
 
 <a href="mailto:lschmid@mit.edu" onFocus="if(this.blur)this.blur()">lschmid@mit.edu</a><br>
+<div><a href="https://schmluk.github.io/">https://schmluk.github.io/</a>
 </span></div>
 <br>
 <br>
 <br>
 <br>
 <div style="text-align: justify; margin-left: 10px; width: 770px; font-family: '@Arial Unicode MS';">
-I'm an incoming postodoctoral fellow at the <a target="_blank" href="http://web.mit.edu/sparklab/">MIT-SPARK Lab</a> lead by Prof. Dr. Luca Carlone. I obtained my PhD at the <a target="_blank" href="https://asl.ethz.ch/">Autonomous Systems Lab (ASL)</a> lead by Prof. Dr. Roland Siegwart at ETH Zurich in 2022, in collaboration with the Microsoft Mixed Reality & AI Lab lead by Prof. Dr. Marc Pollefeys. Before that, I obtained my M.Sc. in Robotics, Systems, and Control (RSC) in 2019 also at ETH, which I graduated with distinction and was awarded the Willi Studer Prize for the best graduate and the ETH Medal for outstanding master theses. <br>
+I'm a postodoctoral fellow at the <a target="_blank" href="http://web.mit.edu/sparklab/">MIT-SPARK Lab</a> lead by Prof. Dr. Luca Carlone. I obtained my PhD at the <a target="_blank" href="https://asl.ethz.ch/">Autonomous Systems Lab (ASL)</a> lead by Prof. Dr. Roland Siegwart at ETH Zurich in 2022, in collaboration with the Microsoft Mixed Reality & AI Lab lead by Prof. Dr. Marc Pollefeys. Before that, I obtained my M.Sc. in Robotics, Systems, and Control (RSC) in 2019 also at ETH, which I graduated with distinction and was awarded the Willi Studer Prize for the best graduate and the ETH Medal for outstanding master theses. <br>
 <br>
 My main research interest lies in autonomy for intelligent mobile systems. In particular, my work focuses on active and passive perception and understanding of changing environments for robotic interaction and augmented reality. This includes building dense geometric and semantic representations of an environment, scene abstraction and understanding, lifelong learning and mapping, as well as active path and interaction planning to build these representations and abstractions autonomously and in unknown environments.<br>
 </div>
