--- a/index.html
+++ b/index.html
@@ -13,14 +13,16 @@ Postdoctoral Fellow<br><br>
 
 MIT-Spark Lab<br>
 Massachusetts Institute of Technology<br>
-Department of Aeronautics and Astronautics<br><br>
-
+Department of Aeronautics and Astronautics<br>
 77 Massachusetts Avenue, Room 32-D569<br>
 Cambridge, MA 02139<br>
 United States of America<br><br>
 
-<a href="mailto:lschmid@mit.edu" onFocus="if(this.blur)this.blur()">lschmid@mit.edu</a><br>
-<div><a href="https://schmluk.github.io/">https://schmluk.github.io/</a>
+<a href="mailto:lschmid@mit.edu" onFocus="if(this.blur)this.blur()">lschmid@mit.edu</a><br><br>
+<div><a href="webpage">https://schmluk.github.io/</a><br>
+<div><a href="linked in">https://www.linkedin.com/in/lukas-schmid-599872217</a><br>
+<div><a href="google scholar">https://scholar.google.com/citations?user=kv4Ybd8AAAAJ</a><br>
+  <div><a href="ORCID">https://orcid.org/0000-0002-3961-8145</a>
 </span></div>
 <br>
 <br>
