--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@ Cambridge, MA 02139, USA<br><br>
 <br>
 
 <div><a href="https://github.com/Schmluk">Github</a>&nbsp;&nbsp;
-<div><a href="https://www.linkedin.com/in/lukas-schmid-599872217">Linked In</a>&nbsp;&nbsp;
-<div><a href="https://scholar.google.com/citations?user=kv4Ybd8AAAAJ">Google Scholar</a>&nbsp;&nbsp;
-  <div><a href="https://orcid.org/0000-0002-3961-8145">ORCID</a>
+<a href="https://www.linkedin.com/in/lukas-schmid-599872217">Linked In</a>&nbsp;&nbsp;
+<a href="https://scholar.google.com/citations?user=kv4Ybd8AAAAJ">Scholar</a>&nbsp;&nbsp;
+<a href="https://orcid.org/0000-0002-3961-8145">ORCID</a>
 </span></div>
 <br>
 <br>
