--- a/index.html
+++ b/index.html
@@ -20,11 +20,12 @@ Cambridge, MA 02139, USA<br><br>
 <a href="mailto:lschmid@mit.edu" onFocus="if(this.blur)this.blur()">lschmid@mit.edu</a><br><br><br>
 <br>
 
-<div><a href="https://github.com/Schmluk">Github</a>&nbsp;&nbsp;
-<a href="https://www.linkedin.com/in/lukas-schmid-599872217">Linked In</a>&nbsp;&nbsp;
-<a href="https://scholar.google.com/citations?user=kv4Ybd8AAAAJ">Scholar</a>&nbsp;&nbsp;
+<div><a href="https://github.com/Schmluk">Github</a>&nbsp;&nbsp;&nbsp;
+<a href="https://www.linkedin.com/in/lukas-schmid-599872217">LinkedIn</a>&nbsp;&nbsp;&nbsp;
+<a href="https://scholar.google.com/citations?user=kv4Ybd8AAAAJ">Scholar</a>&nbsp;&nbsp;&nbsp;
 <a href="https://orcid.org/0000-0002-3961-8145">ORCID</a>
 </span></div>
+<br>
 <br>
 <br>
 <div style="text-align: justify; margin-left: 10px; width: 770px; font-family: '@Arial Unicode MS';">
