update open source code

--- a/code.html
+++ b/code.html
@@ -46,13 +46,85 @@
 	<!-- Main -->
 	<div id="main">
 
-		<!-- Welcome -->
-		<section id="welcome">
+		<!-- Code -->
+		<section id="code">
 			<header class="major">
-				<h2>Welcome!</h2>
+				<h2>Open Source Code</h2>
 			</header>
-			<p> I'm a postodoctoral fellow
+			<p> I am a strong supporter of the open source idea and make most of my research and utility code available. In
+				particular, I try to pay attention to produce modular and re-usable to code to enable the community to extend
+				and build upon the existing frameworks. Please feel free to use, re-use, modify, or contribute to any of the
+				projects!
 			</p>
+
+			<ul class="actions fit">
+				<li><a href="#mapping" class="button fit">Mapping</a></li>
+				<li><a href="#planning" class="button fit">Planning</a></li>
+				<li><a href="#simulation" class="button fit">Simulation</a></li>
+				<li><a href="#utility" class="button fit">Utility</a></li>
+				<li><a href="#phenotyping" class="button fit">Phenotyping</a></li>
+			</ul>
+		</section>
+
+		<!-- Mapping -->
+		<section id="mapping">
+			<header class="major">
+				<h2>Mapping</h2>
+			</header>
+
+			<table>
+				<tr id="panopticmapping"> </tr>
+				<tr id="neuralblox"> </tr>
+			</table>
+		</section>
+
+		<!-- Planning -->
+		<section id="planning">
+			<header class="major">
+				<h2>Planning</h2>
+			</header>
+
+			<table>
+				<tr id="active3d"> </tr>
+				<tr id="glocal"> </tr>
+				<tr id="cvaeplanning"> </tr>
+				<tr id="eal"> </tr>
+				<tr id="ssc"> </tr>
+			</table>
+		</section>
+
+		<!-- Simulation -->
+		<section id="simulation">
+			<header class="major">
+				<h2>Simulation</h2>
+			</header>
+
+			<table>
+				<tr id="unrealairsim"> </tr>
+				<tr id="unrealcv"> </tr>
+			</table>
+		</section>
+
+		<!-- Utility -->
+		<section id="utility">
+			<header class="major">
+				<h2>Utility</h2>
+			</header>
+
+			<table>
+				<tr id="configutilities"> </tr>
+			</table>
+		</section>
+
+		<!-- Phenotyping -->
+		<section id="phenotyping">
+			<header class="major">
+				<h2>Phenotyping</h2>
+			</header>
+
+			<table>
+				<tr id="pheno"> </tr>
+			</table>
 		</section>
 
 		<!-- Footer -->
@@ -75,7 +147,7 @@
 				</ul>
 				<ul class="copyright">
 					<li>&copy; Lukas Schmid</li>
-					<li>Design by <a href="http://html5up.net">HTML5 UP</a></li>
+					<li>Original Design by <a href="http://html5up.net">HTML5 UP</a></li>
 				</ul>
 			</div>
 		</footer>
@@ -87,6 +159,8 @@
 		<script src="assets/js/breakpoints.min.js"></script>
 		<script src="assets/js/util.js"></script>
 		<script src="assets/js/main.js"></script>
+		<script src="publications/opensourcecode.js"></script>
+		<script src="assets/js/build-opensource.js"></script>
 
 </body>
 
