--- a/index.html
+++ b/index.html
@@ -50,16 +50,9 @@
 			<header class="major">
 				<h2>Welcome!</h2>
 			</header>
-			<p> I'm a postodoctoral fellow working with <a href="https://lucacarlone.mit.edu/">Prof. Luca Carlone</a> at the
-				<a href="https://web.mit.edu/sparklab/">SPARK Lab</a> in the <a href="https://aeroastro.mit.edu/">Department of
-					Aeronautics and Astronautics</a> at the <a href="https://www.mit.edu/">Massachusetts Institute of
-					Technology</a>.
-				<br /><br />
-				My main research interests lie in autonomy for intelligent mobile systems. In particular, I focus on active and
-				passive perception in changing environments for robotic interaction and augmented reality. This includes
-				building dense geometric and semantic representations, scene abstraction and understanding, lifelong learning
-				and mapping, and active path and interaction planning to build these representations autonomously and in unknown
-				environments.
+			<p> I'm a postodoctoral fellow working with <a href="https://lucacarlone.mit.edu/">Prof. Luca Carlone</a> at the <a href="https://web.mit.edu/sparklab/">MIT-SPARK Lab</a> in the <a href="https://aeroastro.mit.edu/">Department of Aeronautics and Astronautics</a> at the <a href="https://www.mit.edu/">Massachusetts Institute of Technology</a>.
+				<br/><br />
+				My main research interests lie in autonomy for intelligent mobile systems. In particular, I focus on active and	passive perception in changing environments for robotic interaction and augmented reality. This includes building dense geometric and semantic representations, scene abstraction and understanding, lifelong learning and mapping, and active path and interaction planning to build these representations autonomously and in unknown	environments.
 			</p>
 		</section>
 
@@ -137,9 +130,7 @@
 		<!-- Get in touch -->
 		<section id="getintouch">
 			<h2>Get In Touch</h2>
-			<p>If you're interested in any of the topics, have questions, suggestions, ideas, comments, or just want to chat,
-				I'm happy to get in touch! The easiest way is via <a href="mailto:lschmid@mit.edu">email</a>, I do my best to
-				get back to Please feel free reach out, I'm looking forward to hearing from you!
+			<p>If you're interested in any of the topics, have questions, suggestions, ideas, comments, or just want to chat,	I'm happy to get in touch! The easiest way is via <a href="mailto:lschmid@mit.edu">email</a>, I do my best to get back to you quickly. Please feel free reach out, looking forward to hearing from you!
 			</p>
 
 			<div class="row">
@@ -536,7 +527,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 				</ul>
 				<ul class="copyright">
 					<li>&copy; Lukas Schmid</li>
-					<li>Design by <a href="http://html5up.net">HTML5 UP</a></li>
+					<li>Original Design by <a href="http://html5up.net">HTML5 UP</a></li>
 				</ul>
 			</div>
 		</footer>
