--- a/publications.html
+++ b/publications.html
@@ -49,7 +49,7 @@
 		<!-- Publications -->
 		<section id="publications">
 			<header class="major">
-				<h1>Publications</h1>
+				<h2>Publications</h2>
 			</header>
 			<p>Contributions to peer-reviewed journals, peer-reviewed conference proceedings, recent preprints, and other publications. <br>*Indicates I am a shared first author.</p>
 
@@ -122,7 +122,7 @@
 				</ul>
 				<ul class="copyright">
 					<li>&copy; Lukas Schmid</li>
-					<li>Design by <a href="http://html5up.net">HTML5 UP</a></li>
+					<li>Original Design by <a href="http://html5up.net">HTML5 UP</a></li>
 				</ul>
 			</div>
 		</footer>
